# ATLeagueUtility

./: .gitignore  CMakeLists.txt  clean.sh
src/: Archive.cpp  Archive.hpp  ArchiveMetadata.cpp  ArchiveMetadata.hpp  CMakeLists.txt  File.cpp  File.hpp  clean.sh  main.cpp  parse.cpp  parse.hpp
